--- a/01-metadata.html
+++ b/01-metadata.html
@@ -1,1 +1,16 @@
 <!DOCTYPE html>
+<html lang="ko-KR">
+  <head>
+    <!-- HTML charset 설정 방식 -->
+    <!-- 기존 방식 (HTML4.01. XHTML1.0) -->
+    <!-- <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> -->
+    <!-- <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" /> -->
+    <!-- HTML5 방식 -->
+    <meta charset="UTF-8" />
+    <meta name="author" content="이듬(EUID) - 슬비쌤" />
+    <meta name="keywords" content="웹표준,웹접근성,HTML5" />
+    <meta name="description" content="멋쟁이 사자처럼과 이듬이 함께하는 프론트엔드 개발 스쿨" />
+    <!-- <meta http-equiv="refresh" content="3" /> -->
+  </head>
+  <body></body>
+</html>
