--- a/01-metadata.html
+++ b/01-metadata.html
@@ -7,10 +7,59 @@
     <!-- <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" /> -->
     <!-- HTML5 방식 -->
     <meta charset="UTF-8" />
+
+    <!-- 반응형 디자인을 위한 viewport meta tag 선언 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- SEO를 위한 제작자, 키워드, 성명 등 정보를 명시 -->
     <meta name="author" content="이듬(EUID) - 슬비쌤" />
     <meta name="keywords" content="웹표준,웹접근성,HTML5" />
     <meta name="description" content="멋쟁이 사자처럼과 이듬이 함께하는 프론트엔드 개발 스쿨" />
+
+    <!-- 3초 후 새로고침 시도 -->
     <!-- <meta http-equiv="refresh" content="3" /> -->
+
+    <!-- Open Graph 선언 정보 -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://example.com/page.html" />
+    <meta property="og:title" content="Content Title" />
+    <meta property="og:image" content="https://example.com/image.jpg" />
+    <meta property="og:description" content="Description Here" />
+    <meta property="og:site_name" content="Site Name" />
+    <meta property="og:locale" content="en_US" />
+    <!-- 다음의 태그는 필수는 아니지만, 포함하는 것을 추천함 -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- 기준 URL 설정 및 파비콘 설정 -->
+    <base target="_blank" href="./favicon/" />
+    <!-- _blank =  클릭시 계속해서 새로운 창이 열리게 된다. -->
+    <!-- 현재 위치가 ./favicon/이기 때문에 이후 오는 링크에서 ./favicon/ 생략가능 -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" href="favicon.png" />
+
+    <!-- 문서 제목 -->
+    <title>메타데이터</title>
+
+    <!-- 스타일(Embedded Style) -->
+    <style>
+      body {
+        background: #000;
+        color: #fff;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <h1>메타데이터</h1>
+    <p>메타데이터 관련 요소는 &lt;head&gt; 내에서 사용할 수 있습니다.</p>
+    <p>문자 인코딩 지정은 HTML5 방식과 기존 방식 모두 허용됩니다.</p>
+    <p>&lt;title&gt; 요소는 문서의 제목을 나타내며 텍스트만 허용합니다.</p>
+    <p>뷰포트 메타 태그는 웹브라우저가 페이지를 렌더링할 때 동작하는 방법을 정의합니다.</p>
+    <p>메타태그의 http-equiv 속성에 refresh 값을 사용하여 특정 시간이 지나면 새로고침 하거나 웹페이지로 이동할 수 있습니다.</p>
+    <p>&lt;base&gt; 요소를 사용하여 기준 URL을 지정할 수 있습니다.</p>
+    <p>외부리소스(파비콘, 스타일시트 등)를 연결할 때 &lt;base&gt; 요소를 사용할 수 있습니다.</p>
+    <p>
+      HTML 문서에 스타일을 적용할 때 스타일시트를 &lt;link&gt; 요소로 제공할 수도 있지만 &lt;style&gt; 요소를 사용하여 HTML 문서내에 CSS를 포함할 수도 있습니다.
+    </p>
+  </body>
 </html>
