하이버 링크 요소 학습

--- a/06-anchor.html
+++ b/06-anchor.html
@@ -1,1 +1,36 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width
+initial-scale=1.0"
+    />
+    <title>하이퍼 <span lang="en">link</span></title>
+  </head>
+  <body>
+    <h1 title="여기는 제목입니다" id="heading" class="bigText" tabindex="0">하이퍼링크 관련 속성</h1>
+    <!-- 전역 속성(모든 요소들이 다 가지고 있는 속성): id, class, title, style, hidden, lang, tabindex, date- 등 -->
+    <!-- hidden: DOM에 나타나지 않는 없는 요소이기 때문에 스크린리더가 읽지 않음 -->
+    <!-- tabindex:  -->
+    <!-- date-: 사용자 커스텀 가능 -->
+    <div title="마우스를 올리면 툴팁이 보입니다">
+      <!-- title: SEO 측면에서 좋지 않음 -->
+      <a href="/" style="color: blueviolet">더보기</a>
+      <!-- a 태그 기본 영역 : 화면 끝에서 끝까지 -->
+    </div>
+
+    <div>
+      <!-- 정석 -->
+      <a href="/" title="다운로드">
+        <img src="images/brochure.png" alt="카페 W 강좌 브로슈어" />
+        <!-- img에는 alt 필수/ title 같이 쓰는 건 되도록 지양 -->
+      </a>
+    </div>
+    <div>
+      <a href="./video/stories.mp4" aria-label="카페 W 강좌 브로슈어 다운로드" download> 구글 개발자 이야기 비디오 </a>
+    </div>
+  </body>
+</html>
