섹션 관련 요소 학습

--- a/09-section-main.html
+++ b/09-section-main.html
@@ -25,6 +25,10 @@ initial-scale=1.0"
           <footer>섹션 푸터</footer>
         </article>
       </main>
+      <!-- main은 한 페이지에 한 번 밖에 사용 불가
+      단, hidden 속성을 사용하면 사용 가능 -->
+      <main hidden></main>
+      <main hidden></main>
       <aside>부가 콘텐츠</aside>
       <footer>본문 푸터</footer>
     </body>
