--- a/06-anchor.html
+++ b/06-anchor.html
@@ -8,7 +8,7 @@
       content="width=device-width
 initial-scale=1.0"
     />
-    <title>하이퍼</title>
+    <title>하이퍼 링크</title>
   </head>
   <body>
     <h1 title="여기는 제목입니다" id="heading" class="bigText" tabindex="0">하이퍼링크 관련 속성</h1>
