--- a/12-address.html
+++ b/12-address.html
@@ -1,1 +1,30 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width
+initial-scale=1.0"
+    />
+    <title>address 요소</title>
+  </head>
+  <body>
+    <footer>
+      <address>
+        <span>(주)멋쟁이사자처럼</span>
+        <span>대표이사 이두희</span>
+        <span>서울특별시 종로구 종로3길 17 D타워, 16-17층</span>
+        <span>사업자 등록번호 : 264-88-01106</span>
+        <span>통신판매업 신고 : 2019 - 서울강남 - 00774</span>
+        <span>연락처 : <a href="tel:+821012345678">010-1234-5679</a></span>
+        <!-- 핸드폰에서 해당 링크를 클릭하면 전화걸기 가능 -->
+        <span>문의 <a href="mailto:contact@likelion.net">contact@likelion.net</a></span>
+        <!-- 핸드폰에서 해당 링크를 클릭하면 이메일 어플 실행됨 -->
+        <span>문의 <a href="mailto:contact@likelion.net?subject=문의사항">contact@likelion.net</a></span>
+        <!-- ?subject=문의사항: 자동으로 메일 제목 셋팅 -->
+      </address>
+    </footer>
+  </body>
+</html>
