하이퍼 링크 요소 학습

--- a/06-anchor.html
+++ b/06-anchor.html
@@ -13,7 +13,7 @@ initial-scale=1.0"
   <body>
     <h1 title="여기는 제목입니다" id="heading" class="bigText" tabindex="0">하이퍼링크 관련 속성</h1>
     <!-- 전역 속성(모든 요소들이 다 가지고 있는 속성): id, class, title, style, hidden, lang, tabindex, date- 등 -->
-    <!-- hidden: DOM에 나타나지 않는 없는 요소이기 때문에 스크린리더가 읽지 않음 -->
+    <!-- hidden: DOM에 나타나지 않는 없는 요소이기 때문에 스크린리더가 읽지 않음, 동적인 처리가 필요할 때 사용함-->
     <!-- tabindex:  -->
     <!-- date-: 사용자 커스텀 가능 -->
     <div title="마우스를 올리면 툴팁이 보입니다">
