--- a/13-picture-source.html
+++ b/13-picture-source.html
@@ -1,1 +1,29 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width
+initial-scale=1.0"
+    />
+    <title>픽쳐와 소스</title>
+  </head>
+  <body>
+    <picture>
+      <source srcset="images/netflix.svg" type="image/svg" />
+      <!-- 구버전에서는 source 태그 지원X -->
+      <img src="images/netflix.png" srcset="images/netflix@1x.webp 1x, images/netflix@2x.webp 2x" alt="넷플릭스" />
+      <!-- fallback(대안) 처리 방법 -->
+      <!-- srcset="images/netflix@1x.webp 1x, images/netflix@2x.webp 2x" -->
+      <!-- 모니터 배율 값(1X || 2X)에 따라 이미지 포맷 변경 -->
+    </picture>
+    <picture>
+      <source media="(min-width: 650px)" srcset="https://googlechrome.github.io/samples/picture-element/images/kitten-large.png" />
+      <source media="(min-width: 465px)" srcset="https://googlechrome.github.io/samples/picture-element/images/kitten-medium.png" />
+      <!-- img tag for browsers that do not support picture element -->
+      <img src="https://googlechrome.github.io/samples/picture-element/images/kitten-small.png" alt="a cute kitten" />
+    </picture>
+  </body>
+</html>
