--- a/14-video-source.html
+++ b/14-video-source.html
@@ -12,9 +12,8 @@ initial-scale=1.0"
   </head>
   <body>
     <figure>
-      <video class="fullsize" poster="video/poster.jpg" controls autoplay muted>
+      <video class="fullsize" poster="video/poster.jpg" controls>
         <!-- poster: 섬네일 -->
-        <!-- autoplay: 브라우저 정책상 시각장애인 접근성의 문제로 막아둠 / muted를 함께 사용할 경우 사용 가능함 -->
         <source src="video/google-developer-stories.mp4" type="video/mp4" />
         <source src="video/google-developer-stories.mov" type="video/mov" />
         <source src="video/google-developer-stories.ogg" type="video/ogg" />
@@ -24,7 +23,8 @@ initial-scale=1.0"
       </video>
       <figcaption>구글 개발자 이야기</figcaption>
     </figure>
-    <video src="video/google-developer-stories.mp4" controls></video>
+    <video src="video/google-developer-stories.mp4" controls autoplay muted></video>
+    <!-- autoplay: 브라우저 정책상 시각장애인 접근성의 문제로 막아둠 / muted를 함께 사용할 경우 사용 가능함 -->
     <!-- video가 하나일 경우 개별로 사용 가능 -->
   </body>
 </html>
