--- a/18-form.html
+++ b/18-form.html
@@ -1,1 +1,41 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width
+initial-scale=1.0"
+    />
+    <title>폼 관련 요소</title>
+  </head>
+  <body>
+    <h1>폼 관련 요소</h1>
+    <form action="서버 URL" method="get/post" id="searchForm">
+      <fieldset>
+        <!-- 해당 요소 내에서 flex를 사용할 경우 무너지는 경우가 있어 div를 사용해 디자인 -->
+        <legend>검색</legend>
+        <div>
+          <label for="web-serch">검색</label>
+          <input type="search" name="web-serch" id="web-serch" />
+          <!-- 1:1로 대응되는 label이 반드시 필요 -->
+        </div>
+        <div>
+          <label for=""></label>
+          <select name="" id="">
+            <option value=""></option>
+          </select>
+        </div>
+        <div>
+          <label for=""></label>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+        </div>
+      </fieldset>
+    </form>
+    <button type="submit" form="searchForm">검색</button>
+    <!-- HTML5부터 button이 form 태그의 id 값을 from 요소로 넣어주면 form 밖에서도 전송 가능 -->
+    <!-- form의 action으로 전송 -->
+    <!-- 추가적인 요소는 https://www.miketaylr.com/pres/html5/forms2.html 참고 -->
+  </body>
+</html>
