정의형 목록 요소 학습

--- a/05-definition-list.html
+++ b/05-definition-list.html
@@ -16,7 +16,7 @@ initial-scale=1.0"
         <dt>평점</dt>
         <dd>
           <span aria-hidden="true">★★★★☆</span>
-          <!-- 음성으로 읽지 않음 -->
+          <!-- 시각적으로 보이고 싶으나 스크린리더가 읽지 않게 할 때 사용 -->
           <span>4점</span>
         </dd>
       </div>
