인용문과 줄바꿈 요소 학습

--- a/07-blockquote-br.html
+++ b/07-blockquote-br.html
@@ -22,5 +22,6 @@ initial-scale=1.0"
       <cite>드라마 &lt;미생&gt; 중에서</cite>
       <!-- cite: 책이나 음악, 영화, 예술 작품 등과 같은 창작물의 제목을 정의할 때 사용. -->
     </blockquote>
+    <q>우리가 할 수 있는 노력은 과정이 전부야.</q>
   </body>
 </html>
