어휘 관련 요소 학습

--- a/08-phrasing-element.html
+++ b/08-phrasing-element.html
@@ -9,17 +9,13 @@
 initial-scale=1.0"
     />
     <title>어휘 관련 요소</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
   </head>
   <body>
     <h1>카페 W 강의 후기</h1>
     <div>
-      <p><em>무엇이 중요한 지 알게 된 시간!</em></p>
-      <p>HTML에서 <strong>시멘틱 마크업</strong></p>
-    </div>
-    <h1>카페 W 강의 후기</h1>
-    <div>
       <p><em>무엇이 중요한지 알게된 시간!</em></p>
-      <!-- em: 강조 -->
+      <!-- em: 글자를 굵게 할 때 X. 강조할 때 사용 -->
       <p>
         <!-- strong: 강한 강조 -->
         제가 들었던 해외 튜토리얼에 비해 <strong>시맨틱한 마크업</strong>과 <strong>접근성</strong> 비중이 크게 다뤄져 좋았습니다. 많은 튜토리얼들이 디자인을
@@ -28,6 +24,8 @@ initial-scale=1.0"
       <p><span>★★★★★</span> <b>5점</b> <i>우정민</i></p>
       <!-- b: 중요성, 관련성 없이 다른 글자와 구분 -->
       <!-- i: 다른 텍스트와 구분해야할 때 사용 -->
+      <i class="fa-solid fa-bars"></i>
+      <!-- 폰트어썸 아이콘 -->
     </div>
   </body>
 </html>
