--- a/15-iframe.html
+++ b/15-iframe.html
@@ -23,6 +23,7 @@ initial-scale=1.0"
         allowfullscreen
       ></iframe>
       <!-- iframe: 접근성 측면에서 title 필수 -->
+      <!-- allowfullscreen: 풀스크린 허가 -->
     </div>
     <figure>
       <!-- figure: 기본 여백이 내장됨 -->
