--- a/16-map-area.html
+++ b/16-map-area.html
@@ -14,11 +14,12 @@ initial-scale=1.0"
     <!-- 붙어 있는 이미지에 개별적으로 링크를 걸어주는 방법 -->
     <img src="images/sns.png" usemap="#image-map" />
     <!-- #를 붙여야 map과 연결됨 -->
+    <!-- usemap과 map의 name은 동일해야함 -->
     <map name="image-map">
       <area target="_blank" alt="페이스북" title="페이스북" href="https://www.facebook.com/" coords="15,15,14" shape="circle" />
       <area target="_blank" alt="인스타그램" title="인스타그램" href="https://www.instagram.com/" coords="65,15,14" shape="circle" />
       <area target="_blank" alt="유튜브" title="유튜브" href="https://www.youtube.com/" coords="115,15,14" shape="circle" />
     </map>
-    <!-- coord: 좌표 -->
+    <!-- coords: 좌표 -->
   </body>
 </html>
