테이블 요소 학습

--- a/17-table.html
+++ b/17-table.html
@@ -47,6 +47,7 @@ initial-scale=1.0"
           <td>63</td>
         </tr>
       </tbody>
+      <!-- thead, tbody, tfoot 은 작성한 순서와 상관 없이 head, body, foot 순서대로 나타남 -->
     </table>
     <h1>headers/aria-describedby</h1>
     <p id="tableDesc"></p>
@@ -56,7 +57,6 @@ initial-scale=1.0"
         <p>Column one has the location and size of accommodation, other columns show the type and number of properties available</p>
       </caption> -->
       <tr>
-        <!-- scope 속성 : 셀의 종류를 명시 -->
         <th>과목명</th>
         <th id="html">HTML/CSS</th>
         <th id="js">Javascript</th>
@@ -65,7 +65,7 @@ initial-scale=1.0"
       <tr>
         <th id="ma01">김미리</th>
         <td headers="html ma01">100</td>
-        <!-- 관련 있는 정보와 연결 -->
+        <!-- id 값과 연결하여 스크린리더를 통해 읽어줌 -->
         <td headers="js ma01">95</td>
         <td headers="react ma01">98</td>
       </tr>
