폼 관련 요소 학습

--- a/18-form.html
+++ b/18-form.html
@@ -23,7 +23,7 @@ initial-scale=1.0"
           <label for="web-serch">검색</label>
           <input type="search" name="web-serch" id="web-serch" />
           <!-- 암묵적인 labeling -->
-          <label for="web-serch"
+          <label
             >검색
             <input type="search" name="web-serch" id="web-serch" />
           </label>
