인터렉티브 요소 학습

--- a/19-interactive-element.html
+++ b/19-interactive-element.html
@@ -12,7 +12,7 @@ initial-scale=1.0"
   </head>
   <body>
     <h1>가입안내</h1>
-    <!-- 다이얼로그 예시 -->
+    <!-- 다이얼로그(대화상자) 예시 -->
     <dialog open aria-label="가입안내">
       <p>차별화된 회원가입 혜택</p>
       <a href="/">지금 바로 만나보세요!</a>
@@ -24,7 +24,9 @@ initial-scale=1.0"
 
     <!-- 상세 및 요약 정보 제공 예시 -->
     <div>
-      <details open>
+      <details>
+        <!-- 여닫음 정보 공개 위젯 생성 -->
+        <!-- open 추가시 열림 상태가 디폴트 -->
         <summary>국민 내일배움카드</summary>
         <figure>
           <img src="images/learn-card.png" alt="" />
