--- a/27-font.html
+++ b/27-font.html
@@ -1,1 +1,30 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width
+initial-scale=1.0"
+    />
+    <title>font 관련 속성</title>
+    <link rel="stylesheet" href="./css/27-font.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;700&display=swap" rel="stylesheet" />
+  </head>
+  <body>
+    <h1 class="heading">Hello CSS</h1>
+    <p>
+      국회는 정부의 동의없이 정부가 제출한 지출예산 각항의 금액을 증가하거나 새 비목을 설치할 수 없다. 선거와 국민투표의 공정한 관리 및 정당에 관한 사무를
+      처리하기 위하여 선거관리위원회를 둔다. 모든 국민은 건강하고 쾌적한 환경에서 생활할 권리를 가지며, 국가와 국민은 환경보전을 위하여 노력하여야 한다. 법관이
+      중대한 심신상의 장해로 직무를 수행할 수 없을 때에는 법률이 정하는 바에 의하여 퇴직하게 할 수 있다. 국회는 정부의 동의없이 정부가 제출한 지출예산 각항의
+      금액을 증가하거나 새 비목을 설치할 수 없다. 선거와 국민투표의 공정한 관리 및 정당에 관한 사무를 처리하기 위하여 선거관리위원회를 둔다. 모든 국민은
+      건강하고 쾌적한 환경에서 생활할 권리를 가지며, 국가와 국민은 환경보전을 위하여 노력하여야 한다. 법관이 중대한 심신상의 장해로 직무를 수행할 수 없을 때에는
+      법률이 정하는 바에 의하여 퇴직하게 할 수 있다. 국회는 정부의 동의없이 정부가 제출한 지출예산 각항의 금액을 증가하거나 새 비목을 설치할 수 없다. 선거와
+      국민투표의 공정한 관리 및 정당에 관한 사무를 처리하기 위하여 선거관리위원회를 둔다. 모든 국민은 건강하고 쾌적한 환경에서 생활할 권리를 가지며, 국가와
+      국민은 환경보전을 위하여 노력하여야 한다. 법관이 중대한 심신상의 장해로 직무를 수행할 수 없을 때에는 법률이 정하는 바에 의하여 퇴직하게 할 수 있다. 국회는
+      정부의 동의없이 정부가 제출한 지출예산 각항의 금액을 증가하거나 새 비목을 설치할 수 없다. 선거와 국민투표의 공정한 관리 및 정당에 관한 사무를 처리하기
+      위하여 선거관리위원회를 둔다. 모든 국민은 건강하고
+    </p>
+  </body>
+</html>
